--- a/style.css
+++ b/style.css
@@ -7,7 +7,14 @@
   font-style: normal;
   font-weight: normal;
 }
-
+/*wrapper for all pagges*/
+#wrapper {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 /* Header for all pages */
 header {
   background-color: rgb(131, 80, 248);
@@ -128,6 +135,7 @@ div.textbox span {
 }
 
 /* ProjectPage_Code.html */
+
 .projSelectionP {
   padding-top: 150px;
   min-height: 100vh;
@@ -142,22 +150,26 @@ div.textbox span {
   height: auto;
   left: 8.33%;
   right: 8.33%;
-  background-color: #8cffa0;
   position: absolute;
 }
 
 .container div {
-  background-color: #8ca0ff;
-  padding: 5px;
+  background-color: white;
+  padding: 0px;
 }
 #pic img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
 }
-#info1 {
-  color: white;
-}
-#info2 {
-  color: white;
+#info {
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  padding-left: 10px;
 }
