--- a/style.css
+++ b/style.css
@@ -51,18 +51,11 @@ header ul li a {
 }
 header .logo {
   color: #fff;
-  font-family: Fredoka One;
   font-size: 24px;
   text-transform: uppercase;
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 2px;
-}
-
-/* section Container for all pages */
-.secContainer {
-  padding-top: 30px;
-  min-height: 50vh;
 }
 
 /* Index.html Banner Section*/
@@ -160,11 +153,16 @@ div.textbox span {
   align-items: center;
 }
 
-/* projectPage_Code.html & projectPage_Art.html*/
+/* ProjectPage_Code.html */
+.projSelectionP {
+  padding-top: 30px;
+  min-height: 50vh;
+}
+
 .container {
   display: grid;
-  grid-template-columns: [line1c] 1.5fr [line2c] 2fr [line3c];
-  grid-template-rows: [line1r] 100px [line2r] 200px [line3r] 200px [line4r];
+  grid-template-columns: 1.5fr 2fr;
+  grid-template-rows: 100px 200px 200px;
   grid-gap: 50px 0px;
   box-sizing: border-box;
   height: auto;
@@ -177,8 +175,7 @@ div.textbox span {
 }
 
 #titleC {
-  grid-column-start: line1c;
-  grid-column-end: line3c;
+  grid-column-end: span 2;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -191,74 +188,14 @@ div.textbox span {
   font-style: normal;
   font-weight: normal;
 }
-#contain1 {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  grid-column-start: line1c;
-  grid-column-end: line3c;
-  grid-row-start: line2r;
-}
-#contain1 a {
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
-}
-
-#contain2 {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  grid-column-start: line1c;
-  grid-column-end: line3c;
-  grid-row-start: line3r;
-}
-#contain2 a {
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
-}
-
-#pic1 {
-  display: flex;
-  grid-column-start: line1c;
-  grid-column-end: line2c;
-  grid-row-start: line2r;
-  grid-row-end: line2r;
-  background-color: white;
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-}
-#pic2 {
-  display: flex;
-  grid-column-start: line1c;
-  grid-column-end: line2c;
-  grid-row-start: line3r;
-  grid-row-end: line3r;
-}
-#pic1 img {
+#pic img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
 }
-
-#pic2 img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-}
-
-#info1 {
+#info {
   color: black;
   display: flex;
   flex-direction: column;
@@ -267,13 +204,9 @@ div.textbox span {
   border-bottom-right-radius: 25px;
   padding-left: 10px;
   background-color: #fff;
-  grid-column-start: line2c;
-  grid-column-end: line3c;
-  grid-row-start: line2r;
-  grid-row-end: line2r;
 }
 
-#info1 h2 {
+#info h2 {
   text-decoration: none;
   color: black;
   font-family: Fredoka One;
@@ -281,215 +214,4 @@ div.textbox span {
   font-weight: normal;
   font-size: 2rem;
   line-height: 58px;
-}
-
-#info2 {
-  color: black;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  padding-left: 10px;
-  background-color: #fff;
-  grid-column-start: line2c;
-  grid-column-end: line3c;
-  grid-row-start: line3r;
-  grid-row-end: line3r;
-}
-
-#info2 h2 {
-  text-decoration: none;
-  color: black;
-  font-family: Fredoka One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 2rem;
-  line-height: 58px;
-}
-
-/* projectPageC_1.html*/
-.containerTemp {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto auto auto auto 100px;
-  gap: 45px 50px;
-  box-sizing: border-box;
-  height: auto;
-  left: 8.33%;
-  right: 8.33%;
-}
-#backLink {
-  background: white;
-  width: 180px;
-  height: 75px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
-  border-radius: 25px;
-  font-size: 20px;
-  line-height: 25px;
-  font-weight: bold;
-}
-#backLink:hover {
-  background: rgba(131, 80, 248, 1);
-  width: 180px;
-  height: 75px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
-  border-radius: 25px;
-  font-size: 20px;
-  line-height: 25px;
-  font-weight: bold;
-  color: white;
-}
-#imgc1 {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-#imgc1 img {
-  width: 400px;
-  height: 400px;
-  object-fit: cover;
-  justify-self: center;
-}
-
-.containerTemp div#title h2 {
-  color: #fff;
-  font-family: Fredoka One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 72px;
-  line-height: 87px;
-}
-
-#parac1 {
-  color: #fff;
-  display: flex;
-  align-items: center;
-  text-align: left;
-}
-
-#parac2 {
-  color: #fff;
-  display: flex;
-  align-items: center;
-  text-align: right;
-}
-
-.container1 {
-  display: grid;
-  grid-template-columns: [line1c] 1.5fr [line2c] 2fr [line3c];
-  grid-template-rows: [line1r] 100px [line2r] 200px [line3r] 50px [line4r];
-  gap: 50px 0px;
-  box-sizing: border-box;
-  height: auto;
-  left: 8.33%;
-  right: 8.33%;
-}
-
-/* aboutMe.html */
-#aboutContainer {
-  display: grid;
-  grid-template-columns: [line1] 1fr [line2] 1fr [line3];
-  grid-template-rows: 10px auto auto 50px;
-  gap: 50px 10px;
-}
-
-#titleA {
-  grid-column-start: line1;
-  grid-column-end: line3;
-  grid-row-start: 2;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-#titleA h2 {
-  color: #fff;
-  font-size: 64px;
-  font-family: Fredoka One;
-  font-style: normal;
-  font-weight: normal;
-}
-
-#imgA {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  grid-column-start: line1;
-  grid-column-end: line2;
-  grid-row-start: 3;
-  grid-row-end: 4;
-}
-#imgA img {
-  width: 400px;
-  height: 600px;
-  object-fit: cover;
-  justify-self: center;
-}
-
-#paraA {
-  grid-column-start: line2;
-  grid-column-end: line3;
-  grid-row-start: 3;
-}
-
-#paraA p {
-  color: white;
-}
-
-#contactContainer {
-  display: grid;
-  grid-template-columns: [line1] 1fr [line2] 1fr [line3] 1fr [line4];
-  grid-template-rows: 10px auto auto 100px;
-  gap: 50px 10px;
-}
-
-#titleCo {
-  grid-column-start: line1;
-  grid-column-end: line4;
-  grid-row-start: 2;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-#titleCo h2 {
-  color: #fff;
-  font-size: 64px;
-  font-family: Fredoka One;
-  font-style: normal;
-  font-weight: normal;
-}
-
-#img1,
-#img2,
-#img3 {
-  display: flex;
-  justify-content: space-around;
-}
-#img1 img,
-#img2 img,
-#img3 img {
-  width: 200px;
-  height: 200px;
-}
-#img1 {
-  grid-column-start: line1;
-  grid-column-end: line2;
-  grid-row-start: 3;
-}
-#img2 {
-  grid-column-start: line2;
-  grid-column-end: line3;
-  grid-row-start: 3;
-}
-#img3 {
-  grid-column-start: line3;
-  grid-column-end: line4;
-  grid-row-start: 3;
 }
