--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ div.textbox span {
 #imgc1 img {
   width: 400px;
   height: 400px;
-  object-fit: cover;
+  object-fit: contain;
   justify-self: center;
 }
 
